--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -4,10 +4,14 @@ $color-primary:
 $color-primary-light: #946be6;
 $color-primary-dark: #7752c1;
 
-$color-grey-light: #f7f7f7;
-$color-grey-dark: #a6a6a6;
+$color-grey-light: #e5e5e5;
+$color-grey-dark: #ccc;
+$color-grey-darker: #626262;
 
-$color-teal-light: #eef5f4;
+
+$color-teal-light: #f2f7f6;
+$color-teal-lighter: #fafcfc;
+$color-teal-dark: #c0cfcd;
 
 $color-black: #000;
 $color-white: #fff;
@@ -30,7 +34,10 @@ $default-font-size: 1.6rem;
 }
 
 @keyframes moveUpDown {
-  0%, 20%, 50%, 80%, 100% {
+  0%, 100% {
+    transform: translateX(0px);
+  }
+  20%, 50%, 80% {
     transform: translateY(5px);
   }
   40% {
