--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -2,11 +2,10 @@ main {
   padding: 0 15rem;
   font-size: 2rem;
   text-align: center;
-  height: 100vh;
   background-image: linear-gradient(
       170deg,
-      $color-white 0%, $color-white 65%,
-      $color-teal-light 65.1%, $color-teal-light 100%
+      $color-white 0%, $color-white 67%,
+      $color-teal-light 67.1%, $color-teal-light 100%
     );
   background-size: 100%;
 }
@@ -18,5 +17,37 @@ main {
   .page-info {
     margin-top: 1rem;
     margin-bottom: 3rem;
+  }
+}
+
+.section-services {
+  margin-bottom: 7rem;
+}
+
+.section-contact {
+  padding-bottom: 5rem;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+
+  .contact--left {
+    text-align: left;
+    font-size: 3rem;
+    line-height: 1.3;
+
+    justify-self: start;
+
+    &-top {
+      color: $color-primary-light;
+    }
+
+    &-bottom {
+      color: $color-primary-dark;
+    }
+  }
+
+  .contact--right {
+    justify-self: end;
   }
 }
