--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -20,6 +20,25 @@ body {
   }
 }
 
+.heading-secondary {
+  font-size: 3rem;
+  font-weight: 400;
+  position: relative;
+  // color: $color-grey-darker;
+  margin-bottom: 3rem;
+
+  &::after {
+    position: absolute;
+    content: '';
+    display: block;
+    bottom: 0;
+    left: 50%;
+    transform:translateX(-50%);
+    width: 6rem;
+    border: 1.5px solid $color-grey-darker;
+  }
+}
+
 .heading-tertiary {
   font-size: 1.8rem;
   color: $color-grey-light;
@@ -28,31 +47,42 @@ body {
   margin-bottom: 1.5rem;
 }
 
+.heading-4 {
+  text-transform: uppercase;
+  color: $color-grey-darker;
+}
+
 .btn {
   color: #fff;
   border: none;
+  border-radius: 10px;
   font-family: inherit;
+  font-size: 1.6rem;
   cursor: pointer;
-  transition: all .2s;
+  text-transform: uppercase;
+  transition: all .2s ease-in;
 
   &--search {
     padding: 2.3rem 4rem;
-    border-radius: 10px;
     font-size: 2rem;
+    text-transform: none;
   }
 
   &--nav {
     padding: 1rem 3rem;
     border-radius: 5px;
-    font-size: 1.6rem;
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.3);
+    text-transform: none;
   }
 
   &--create {
     padding: 1rem 4rem;
-    border-radius: 10px;
-    font-size: 1.5rem;
-    text-transform: uppercase;
+  }
+
+  &--contact {
+    padding: 1rem 3rem;
+    margin-left: 1rem;
+    box-shadow: 0 .5rem 1rem rgba($color-black, 0.3);
   }
 
   &--green {
@@ -61,6 +91,11 @@ body {
 
   &--purple {
     background-color: $color-primary;
+  }
+
+  &--white {
+    background-color: $color-white;
+    color: $color-grey-darker;
   }
 
   &:hover {
