added scroll effect

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "styles/base";
 @import "styles/typography";
+@import "styles/animation";
 
 @import "styles/header";
 @import "styles/navbar";
