--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -27,9 +27,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    animation: fadeIn 1.5s ease-in;
+    cursor: pointer;
 
-    &-icon {
-      position: relative;
+    span {
       width: 7rem;
       height: 7rem;
       display: flex;
@@ -38,12 +39,13 @@
       margin: 0 auto;
       border-radius: 50%;
       background: $color-green;
-      cursor: pointer;
+      font-size: 3rem;
+      color: $color-white;
+      transition: all .2s;
+      animation: bounce 1.5s linear infinite;
 
-      span {
-        font-size: 3rem;
-        color: $color-white;
-        animation: moveUpDown 1.5s linear infinite;
+      &:hover {
+        animation: none;
       }
     }
   }
@@ -51,6 +53,7 @@
 
 .search {
   padding: 0;
+  animation: moveInUp 1s ease;
 
   &__input {
     font-family: inherit;
