--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,9 +1,24 @@
+.sticky {
+  background: $color-primary-dark;
+  position: fixed;
+  z-index: 1000;
+  padding: 1.5rem 15rem;
+  box-shadow: 0 .3rem .5rem rgba($color-black, 0.2);
+}
+
+.none {
+  position: relative;
+  background: transparent;
+  padding: 2rem 15rem 0 15rem;
+}
+
 .nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: $color-white;
-  padding: 2rem 15rem 0 15rem;
+  cursor: pointer;
 
   &__logo {
     font-size: 2rem;
@@ -20,7 +35,6 @@
     list-style: none;
     display: flex;
     align-items: center;
-    cursor: pointer;
 
     li {
       margin-right: 3rem;
