--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -5,15 +5,19 @@ body {
   color: $color-grey-dark;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .heading-primary {
   color: $color-white;
   display: block;
   font-size: 5.5rem;
   line-height: 1.3;
   padding-bottom: 3rem;
-  // animation-name: moveInLeft;
-  // animation-duration: 1s;
-  // animation-timing-function: ease-out;
+  animation: moveInLeft 1s ease;
+  animation-fill-mode: backwards;
 
   span {
     color: $color-green;
@@ -24,7 +28,6 @@ body {
   font-size: 3rem;
   font-weight: 400;
   position: relative;
-  // color: $color-grey-darker;
   margin-bottom: 3rem;
 
   &::after {
