--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,13 +1,37 @@
 .footer {
   padding: 8rem 15rem;
   font-size: 1.8rem;
-  background-color: $color-primary-dark;
+  background-color: $color-primary-light;
   color: $color-grey-dark;
 
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-column-gap: 6rem;
   justify-items: center;
+
+  @media only screen and (max-width: $bp-largest) {
+    padding: 10rem;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 5rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, minmax(min-content max-content));
+    grid-column-gap: 1rem;
+    grid-row-gap: 3rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    grid-template-columns: auto;
+    grid-row-gap: 1rem;
+    // padding: 0 3rem;
+  }
+
+  &-left {
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+    }
+  }
 
   .info {
     display: flex;
@@ -64,12 +88,22 @@
     display: flex;
     flex-direction: column;
 
+    @media only screen and (max-width: $bp-medium) {
+      flex-direction: row;
+      grid-column: 1 / -1;
+    }
+
     &__icons {
       margin-bottom: 2rem;
       width: 3rem !important;
       height: 3rem !important;
-      color: $color-teal-dark;
+      color: $color-grey-dark-2;
       transition: all .2s ease-in;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-right: 2rem;
+        margin-bottom: 0;
+      }
 
       &:hover {
         color: $color-white;
