--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -4,12 +4,23 @@
   background-image: linear-gradient(
       170deg,
       $color-primary-dark 0%, $color-primary-dark 12%,
-      $color-primary 12.1%, $color-primary 60%,
+      $color-primary 12.1%, $color-primary-2 60%,
       $color-primary-light 60.1%, $color-primary-light 75%,
       $color-white 75.1%, $color-white 100%
     );
   background-size: 100%;
   background-position: top;
+
+  @media only screen and (max-width: $bp-medium) {
+    height: 100vh;
+    background-image: linear-gradient(
+        170deg,
+        $color-primary-dark 0%, $color-primary-dark 12%,
+        $color-primary 12.1%, $color-primary 70%,
+        $color-primary-light 70.1%, $color-primary-light 80%,
+        $color-white 80.1%, $color-white 100%
+      );
+  }
 
   &__text-box {
     position: absolute;
@@ -19,16 +30,32 @@
     text-align: center;
     width: 90%;
     padding: 0 10rem;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 5rem;
+    }
   }
 
   &__pointer {
     position: absolute;
-    bottom: 5vh;
+    bottom: 5%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     animation: fadeIn 1.5s ease-in;
     cursor: pointer;
+
+    @media only screen and (max-width: $bp-largest) {
+      bottom: 15%;
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+      bottom: 10%;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      bottom: 8%;
+    }
 
     span {
       width: 7rem;
@@ -55,6 +82,11 @@
   padding: 0;
   animation: moveInUp 1s ease;
 
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__input {
     font-family: inherit;
     font-size: 2rem;
@@ -65,6 +97,11 @@
     border-radius: 10px;
     width: 45%;
     margin-right: 1rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 90%;
+      margin: 2rem auto;
+    }
 
     &:focus {
       outline: none;
