--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -19,6 +19,10 @@ a {
   animation: moveInLeft 1s ease;
   animation-fill-mode: backwards;
 
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 4rem;
+  }
+
   span {
     color: $color-green;
   }
@@ -69,6 +73,11 @@ a {
     padding: 2.3rem 4rem;
     font-size: 2rem;
     text-transform: none;
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 17rem;
+      margin: 0 auto;
+    }
   }
 
   &--nav {
@@ -86,6 +95,11 @@ a {
     padding: 1rem 3rem;
     margin-left: 1rem;
     box-shadow: 0 .5rem 1rem rgba($color-black, 0.3);
+
+    @media only screen and (max-width: $bp-small) {
+      margin-top: 2rem;
+      margin-left: 0;
+    }
   }
 
   &--green {
@@ -93,7 +107,7 @@ a {
   }
 
   &--purple {
-    background-color: $color-primary;
+    background-color: $color-primary-light;
   }
 
   &--white {
