--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -15,7 +15,6 @@ a {
   display: block;
   font-size: 5.5rem;
   line-height: 1.3;
-  padding-bottom: 3rem;
   animation: moveInLeft 1s ease;
   animation-fill-mode: backwards;
 
@@ -60,7 +59,7 @@ a {
 }
 
 .btn {
-  color: #fff;
+  color: $color-white;
   border: none;
   border-radius: 10px;
   font-family: inherit;
@@ -77,6 +76,10 @@ a {
     @media only screen and (max-width: $bp-medium) {
       width: 17rem;
       margin: 0 auto;
+    }
+    @media only screen and (max-width: $bp-smallest) {
+      padding: 1rem 3rem;
+      width: 10rem;
     }
   }
 
